Fixed wrong font colour

--- a/css/style.css
+++ b/css/style.css
@@ -354,7 +354,7 @@ body, html {
   margin: 0;
   padding: 0;
   font-family: Arial;
-  color: #532A17;
+  color: #532b1d;
 }
 
  /* Mobile device screen */
